cmake_minimum_required(VERSION 3.21)
project(C___poniters)

set(CMAKE_CXX_STANDARD 14)

add_executable(C___poniters main.cpp pointers_2.cpp function_argument_poniter.cpp cmake-build-debug/array.cpp cmake-build-debug/char_arrays.cpp race/animal_race.cpp polynomial/Polynomial.h polynomial/Polynomial.cpp char_array_2.cpp 2d_array.cpp)
